# claim-lint

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
claim_lint/: cli.py  config.py  scanner.py
docs/release/v0.1.0/: claims-to-evidence.md  demo-script.md  distribution-copy.md  portfolio-case-study.md  publish-prep.md  release-evidence.md  release-notes.md
docs/release/v0.1.0/fixtures/: .claimlintrc.json  invalid-readme.md  valid-readme.md
tests/: test_claim_lint.py
